[package]
name = "single_byte_hashmap"
version = "0.1.1"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
edition = "2018"
description = "A simple HashMap for storing singular bytes as keys"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/billyb2/single_byte_hashmap-rs"
repository = "https://github.com/billyb2/single_byte_hashmap-rs"
keywords = ["hashmap", "byte"]
categories = ["data-structures"]

[features]
default = ["faster_hashmap"]

faster_hashmap = [
    "hashbrown",
]

rayon = [
    "faster_hashmap",
    "hashbrown/rayon",
]

nightly = [
    "faster_hashmap",
    "hashbrown/nightly",
]

serde = [
    "faster_hashmap",
    "hashbrown/serde",
]

[dependencies]
hashbrown = { version = "0.11", default-features = false, features = ["inline-more"], optional = true}
